<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_name">Please enter your name.</string>
    <string name="e_g_jacky">e.g Jacky</string>
    <string name="start">Start</string>
    <string name="str_question">What country does this flag belongs to?</string>
    <string name="desc_image">Quiz Image</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="congratulations">Congratulations</string>
    <string name="finish">FINISH</string>
</resources>